[gd_scene load_steps=2 format=2]

[ext_resource path="res://games/thunderstone/thunderstone.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 450.0
margin_bottom = 395.0
size_flags_vertical = 3

[node name="thunderstone_base" type="CheckBox" parent="VBoxContainer/top"]
margin_right = 450.0
margin_bottom = 24.0
text = "Thunderstone Base Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_wrath" type="CheckBox" parent="VBoxContainer/top"]
margin_top = 28.0
margin_right = 450.0
margin_bottom = 52.0
text = "Thunderstone Wrath "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_doom" type="CheckBox" parent="VBoxContainer/top"]
margin_top = 56.0
margin_right = 450.0
margin_bottom = 80.0
text = "Thunderstone Doom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_dragon" type="CheckBox" parent="VBoxContainer/top"]
margin_top = 84.0
margin_right = 450.0
margin_bottom = 108.0
text = "Thunderstone Dragon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_thorn" type="CheckBox" parent="VBoxContainer/top"]
margin_top = 112.0
margin_right = 450.0
margin_bottom = 136.0
text = "Thunderstone Thorn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_heart" type="CheckBox" parent="VBoxContainer/top"]
margin_top = 140.0
margin_right = 450.0
margin_bottom = 164.0
text = "Thunderstone Heart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random" type="Button" parent="VBoxContainer/top"]
margin_top = 168.0
margin_right = 450.0
margin_bottom = 188.0
text = "Randomize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 405.0
margin_right = 450.0
margin_bottom = 800.0
size_flags_vertical = 3
